Amélioration de l'expérience mobile : ajout d'effet de glissement fluide pour les images en lightbox et correction du zoom sur les boutons de navigation

--- a/indexMob.html
+++ b/indexMob.html
@@ -436,8 +436,8 @@
                 </div>
               </div>
             </div>
-            <button class="slider-button prev">❮</button>
-            <button class="slider-button next">❯</button>
+            <button class="slider-button prev">‹</button>
+            <button class="slider-button next">›</button>
           </div>
         </section>
 
