feat: Amélioration du slider et de la galerie mobile - Ajout de la navigation tactile - Optimisation des performances - Correction des styles pour une meilleure expérience utilisateur

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <a href="https://ableton.school" class="ableton" target="_blank">Ableton School</a>
           </div>
         </div>
+
         <div class="nav-buttons">
           <a href="#releases">Releases</a>
           <a href="#events">Events</a>
@@ -171,20 +172,11 @@
           </div>
         </section>
 
-        <section class="gallery-section">
-          <div class="gallery-container">
-            <div class="gallery-grid"></div>
+        <section class="medias-section">
+          <div class="medias-container">
+            <div class="medias-grid"></div>
           </div>
         </section>
-      </div>
-
-      <div class="lightbox">
-        <div class="lightbox-content">
-          <img src="" alt="" />
-        </div>
-        <span class="close">&times;</span>
-        <span class="prev">&#10094;</span>
-        <span class="next">&#10095;</span>
       </div>
 
       <div class="vertical-menu"></div>
@@ -195,5 +187,12 @@
     <!-- SoundCloud Widget API -->
     <script src="https://w.soundcloud.com/player/api.js"></script>
     <script src="script.js"></script>
+
+    <div class="lightbox">
+        <span class="lightbox-close">&times;</span>
+        <span class="lightbox-prev">&lt;</span>
+        <span class="lightbox-next">&gt;</span>
+        <img src="" alt="" class="lightbox-image">
+    </div>
   </body>
 </html>
