--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div id="waveform"></div>
                     </div>
                 </div>
-                <audio id="featured-audio" src="files/Maudite Machine - Autopsynth (Original Mix).wav"></audio>
+                <audio id="featured-audio" src="files/Maudite Machine - Autopsynth (Original Mix).mp3"></audio>
             </div>
           </div>
           <div class="releases-container">
