refactor: suppression des iframes SoundCloud et implémentation du nouveau lecteur audio

--- a/index.html
+++ b/index.html
@@ -90,12 +90,31 @@
             </div>
           </div>
           <div class="releases-container">
-            <div class="release-iframe">
-              <div class="release-cover">
-                <img src="files/Autopsynth.jpg" alt="Autopsynth" />
-                <div class="soundcloud-overlay">
-                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2041486933&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <div class="release-card">
+              <img src="files/Coagule.jpg" alt="Coagule">
+              <div class="release-info">
+                <div class="title">Coagule</div>
+                <div class="label">Label: Maudite Machine</div>
+                <div class="upc">UPC: 197318123456</div>
+                <div class="isrc">ISRC: FR-123-23-12345</div>
+                <div class="release-date">Release Date: 2023-12-15</div>
+              </div>
+              <div class="track-player">
+                <div class="track-cover">
+                  <img src="files/Coagule.jpg" alt="Coagule">
                 </div>
+                <div class="track-info">
+                  <div class="track-title">Coagule</div>
+                  <button class="play-button">
+                    <svg viewBox="0 0 24 24">
+                      <path d="M8 5v14l11-7z"/>
+                    </svg>
+                  </button>
+                </div>
+                <div class="waveform-container">
+                  <div id="waveform"></div>
+                </div>
+                <audio src="files/Maudite Machine - Coagule (Original Mix).mp3"></audio>
               </div>
             </div>
             <div class="release-iframe">
@@ -111,14 +130,6 @@
                 <img src="files/BackOnTrack.jpg" alt="Back On Track" />
                 <div class="soundcloud-overlay">
                   <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2043036668&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                </div>
-              </div>
-            </div>
-            <div class="release-iframe">
-              <div class="release-cover">
-                <img src="files/Coagule.jpg" alt="Coagule" />
-                <div class="soundcloud-overlay">
-                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2026644908&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 </div>
               </div>
             </div>
