--- a/index.html
+++ b/index.html
@@ -70,14 +70,6 @@
         <section class="releases-section">
           <div class="featured-release">
             <div class="featured-track">
-                <div class="track-info">
-                    <button class="play-button">
-                        <svg viewBox="0 0 24 24">
-                            <path d="M8 5v14l11-7z"/>
-                        </svg>
-                    </button>
-                    <div class="track-title">Maudite Machine</div>
-                </div>
                 <div class="track-player">
                     <div class="track-cover">
                         <img src="files/Autopsynth.jpg" alt="Autopsynth Cover">
@@ -86,76 +78,41 @@
                         <div id="waveform"></div>
                     </div>
                 </div>
-                <audio id="featured-audio" src="files/Maudite Machine - Autopsynth (Original Mix).mp3"></audio>
+                <div class="track-info">
+                    <button class="play-button">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M8 5v14l11-7z"/>
+                        </svg>
+                    </button>
+                    <div class="track-title">Maudite Machine - Autopsynth (Original Mix)</div>
+                    <div class="track-details">VRSTL - March 21, 2025 - ISRC: GX3Q92593896 - <a href="https://bit.ly/3Rhh7xz" class="buy-button" target="_blank">Buy</a></div>
+                </div>
             </div>
           </div>
           <div class="releases-container">
             <div class="release-card">
               <img src="files/Coagule.jpg" alt="Coagule">
-              <div class="release-info">
-                <div class="title">Coagule</div>
-                <div class="label">Label: Maudite Machine</div>
-                <div class="upc">UPC: 197318123456</div>
-                <div class="isrc">ISRC: FR-123-23-12345</div>
-                <div class="release-date">Release Date: 2023-12-15</div>
-              </div>
-              <div class="track-player">
-                <div class="track-cover">
-                  <img src="files/Coagule.jpg" alt="Coagule">
-                </div>
-                <div class="track-info">
-                  <div class="track-title">Coagule</div>
-                  <button class="play-button">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8 5v14l11-7z"/>
-                    </svg>
-                  </button>
-                </div>
-                <div class="waveform-container">
-                  <div id="waveform"></div>
-                </div>
-                <audio src="files/Maudite Machine - Coagule (Original Mix).mp3"></audio>
-              </div>
             </div>
-            <div class="release-iframe">
-              <div class="release-cover">
-                <img src="files/Nocturne.jpg" alt="Nocturne" />
-                <div class="soundcloud-overlay">
-                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2033069728&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                </div>
-              </div>
+            <div class="release-card">
+              <img src="files/Nocturne.jpg" alt="Nocturne">
             </div>
-            <div class="release-iframe">
-              <div class="release-cover">
-                <img src="files/BackOnTrack.jpg" alt="Back On Track" />
-                <div class="soundcloud-overlay">
-                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2043036668&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                </div>
-              </div>
+            <div class="release-card">
+              <img src="files/BackOnTrack.jpg" alt="Back On Track">
             </div>
-            <div class="release-iframe">
-              <div class="release-cover">
-                <img src="files/Richie.jpg" alt="Richie" />
-                <div class="soundcloud-overlay">
-                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2002621459&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                </div>
-              </div>
+            <div class="release-card">
+              <img src="files/Richie.jpg" alt="Richie">
             </div>
-            <div class="release-iframe">
-              <div class="release-cover">
-                <img src="files/TatiCardi.jpg" alt="Tati Cardi" />
-                <div class="soundcloud-overlay">
-                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2001680067&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                </div>
-              </div>
+            <div class="release-card">
+              <img src="files/CrushOnYou.jpg" alt="Crush On You">
             </div>
-            <div class="release-iframe">
-              <div class="release-cover">
-                <img src="files/CrushOnYou.jpg" alt="Crush On You" />
-                <div class="soundcloud-overlay">
-                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2001678383&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                </div>
-              </div>
+            <div class="release-card">
+              <img src="files/TatiCardi.jpg" alt="Tati Cardi">
+            </div>
+            <div class="release-card">
+              <img src="files/DramaQueen.jpg" alt="DramaQueen">
+            </div>
+            <div class="release-card">
+              <img src="files/Discowriders.jpg" alt="Discowriders">
             </div>
           </div>
         </section>
