fix: mise à jour de la structure HTML pour le chargement dynamique des releases

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="featured-track">
                 <div class="track-player">
                     <div class="track-cover">
-                        <img src="files/Autopsynth.jpg" alt="Autopsynth Cover">
+                        <img src="" alt="Featured Track Cover">
                     </div>
                     <div class="waveform-container">
                         <div id="waveform"></div>
@@ -84,8 +84,8 @@
                             <path d="M8 5v14l11-7z"/>
                         </svg>
                     </button>
-                    <div class="track-title">Maudite Machine - Autopsynth (Original Mix)</div>
-                    <div class="track-details">VRSTL - March 21, 2025 - ISRC: GX3Q92593896 - <a href="https://bit.ly/3Rhh7xz" class="buy-button" target="_blank">Buy</a></div>
+                    <div class="track-title"></div>
+                    <div class="track-details"></div>
                 </div>
             </div>
           </div>
