--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
       gtag('js', new Date());
       gtag('config', 'G-HP92HGMNJT');
     </script>
+    <link rel="icon" type="image/svg+xml" href="files/Logo Align White 2.svg">
+    
+    <!-- Meta tags pour les réseaux sociaux -->
+    <meta property="og:title" content="Maudite Machine">
+    <meta property="og:description" content="DJ et producteur de musique électronique">
+    <meta property="og:image" content="https://mauditemachine.com/files/Logo%20Align%20White%202.svg">
+    <meta property="og:url" content="https://mauditemachine.com">
+    <meta property="og:type" content="website">
+    
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Maudite Machine">
+    <meta name="twitter:description" content="DJ et producteur de musique électronique">
+    <meta name="twitter:image" content="https://mauditemachine.com/files/Logo%20Align%20White%202.svg">
   </head>
   <body>
     <div class="main-container">
