feat: mise à jour de l'image de partage pour les réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <!-- Meta tags pour les réseaux sociaux -->
     <meta property="og:title" content="Maudite Machine">
     <meta property="og:description" content="DJ et producteur de musique électronique">
-    <meta property="og:image" content="https://mauditemachine.com/files/Logo%20Align%20White%202.svg">
+    <meta property="og:image" content="https://mauditemachine.com/files/default.png">
     <meta property="og:url" content="https://mauditemachine.com">
     <meta property="og:type" content="website">
     
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Maudite Machine">
     <meta name="twitter:description" content="DJ et producteur de musique électronique">
-    <meta name="twitter:image" content="https://mauditemachine.com/files/Logo%20Align%20White%202.svg">
+    <meta name="twitter:image" content="https://mauditemachine.com/files/default.png">
   </head>
   <body>
     <div class="main-container">
